--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,9 @@
 		"express": "4.21.2",
 		"express-basic-auth": "1.2.1",
 		"livekit-server-sdk": "2.9.7",
+		"passport": "0.7.0",
+		"passport-openidconnect": "0.1.2",
+		"passport-saml": "3.2.4",
 		"winston": "3.17.0"
 	},
 	"devDependencies": {
@@ -44,6 +47,9 @@
 		"@types/cors": "2.8.17",
 		"@types/express": "4.17.21",
 		"@types/node": "20.17.16",
+		"@types/passport": "^1.0.17",
+		"@types/passport-openidconnect": "^0.1.3",
+		"@types/passport-saml": "^1.1.7",
 		"@typescript-eslint/eslint-plugin": "6.7.5",
 		"@typescript-eslint/parser": "6.7.5",
 		"cross-env": "7.0.3",
